# PPTXFontInstaller

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  CdC.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: conf.py  contributing.rst  index.rst
docs/user/: fallbacks.rst  glossary.rst  gui-cas-pratiques.rst  gui.rst  quickstart.rst
pptx_font_resolver/: __init__.py  analysis.py  cache.py  cli.py  docx_parser.py  fontconfig.py  fontist_backend.py  models.py  pptx_parser.py  qt_app.py  report.py  resolver.py  scanner.py  theme_resolver.py  webapp.py
pptx_font_resolver/data/: distro_packages.json  font_aliases.json  google_fonts_index.json  symbol_fonts.json
pptx_font_resolver/resolution/: __init__.py  data.py  engine.py  fontconfig_aliases.py  google_fonts.py  manual_import.py  models.py  providers.py  report.py
tests/: conftest.py  test_analysis.py  test_cli_install.py  test_cli_resolution_commands.py  test_cli_resolve.py  test_depth_walk.py  test_distro_provider.py  test_docx_parser.py  test_fontconfig.py  test_fontconfig_aliases.py  test_fontist_backend.py  test_google_fonts.py  test_manual_import.py  test_pptx_parser.py  test_qt_app.py  test_reports.py  test_resolution.py  test_resolution_engine.py  test_resolution_reports.py  test_risk_classification.py  test_scanner.py
