[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptx-font-resolver"
version = "0.1.0"
description = "Scan PPTX files and diagnose missing Linux fonts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jeff Witz" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
]

[project.scripts]
pptx-font-resolver = "pptx_font_resolver.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

